@@ -10,6 +10,7 @@ SVN
 -bug#0001125: XML parse error on template import with degree symbol 
 -bug#0001366: Exported data templates do not import the special characters properly 
 -bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
+-bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes 
 
 0.8.7e
 
